; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mbedtls/port/esp32s2beta/extr_esp_bignum.c_esp_mpi_acquire_hardware.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mbedtls/port/esp32s2beta/extr_esp_bignum.c_esp_mpi_acquire_hardware.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mpi_lock = common dso_local global i32 0, align 4
@DPORT_PERI_CLK_EN_REG = common dso_local global i32 0, align 4
@DPORT_CLK_EN_RSA = common dso_local global i32 0, align 4
@DPORT_PERI_RST_EN_REG = common dso_local global i32 0, align 4
@DPORT_RST_EN_RSA = common dso_local global i32 0, align 4
@DPORT_RST_EN_DIGITAL_SIGNATURE = common dso_local global i32 0, align 4
@DPORT_RST_EN_SECURE_BOOT = common dso_local global i32 0, align 4
@DPORT_RSA_PD_CTRL_REG = common dso_local global i32 0, align 4
@DPORT_RSA_MEM_PD = common dso_local global i32 0, align 4
@RSA_QUERY_CLEAN_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_mpi_acquire_hardware() #0 {
  %1 = call i32 @_lock_acquire(i32* @mpi_lock)
  %2 = load i32, i32* @DPORT_PERI_CLK_EN_REG, align 4
  %3 = load i32, i32* @DPORT_CLK_EN_RSA, align 4
  %4 = call i32 @DPORT_REG_SET_BIT(i32 %2, i32 %3)
  %5 = load i32, i32* @DPORT_PERI_RST_EN_REG, align 4
  %6 = load i32, i32* @DPORT_RST_EN_RSA, align 4
  %7 = load i32, i32* @DPORT_RST_EN_DIGITAL_SIGNATURE, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @DPORT_RST_EN_SECURE_BOOT, align 4
  %10 = or i32 %8, %9
  %11 = call i32 @DPORT_REG_CLR_BIT(i32 %5, i32 %10)
  %12 = load i32, i32* @DPORT_RSA_PD_CTRL_REG, align 4
  %13 = load i32, i32* @DPORT_RSA_MEM_PD, align 4
  %14 = call i32 @DPORT_REG_CLR_BIT(i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %19, %0
  %16 = load i32, i32* @RSA_QUERY_CLEAN_REG, align 4
  %17 = call i32 @DPORT_REG_READ(i32 %16)
  %18 = icmp ne i32 %17, 1
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  br label %15

20:                                               ; preds = %15
  ret void
}

declare dso_local i32 @_lock_acquire(i32*) #1

declare dso_local i32 @DPORT_REG_SET_BIT(i32, i32) #1

declare dso_local i32 @DPORT_REG_CLR_BIT(i32, i32) #1

declare dso_local i32 @DPORT_REG_READ(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
